--- a/Frontend/src/locales/ru.json
+++ b/Frontend/src/locales/ru.json
@@ -96,7 +96,12 @@
     "user": "Пользователь",
     "registration": "Регистрация",
     "load_error": "Не удалось загрузить список пользователей",
-    "load_error_general": "Произошла ошибка при загрузке списка пользователей"
+    "load_error_general": "Произошла ошибка при загрузке списка пользователей",
+    "architect": "Архитектор",
+    "set_role": "Назначить роль",
+    "remove_role": "Убрать роль",
+    "role_updated": "Роль пользователя обновлена",
+    "role_update_error": "Не удалось обновить роль пользователя"
   },
   "user_stats": {
     "title": "Статистика пользователей",
