--- a/Frontend/src/locales/ru.json
+++ b/Frontend/src/locales/ru.json
@@ -85,6 +85,14 @@
         "description": "Пример контента карточки"
       },
       "new": "Новое"
+    },
+    "sessions": {
+      "title": "Игровые сессии",
+      "loading": "Загрузка сессий...",
+      "no_sessions": "Нет доступных сессий",
+      "architect": "Архитектор",
+      "players": "Игроки",
+      "create_session": "Создать сессию"
     }
   },
   "users_view": {
@@ -142,5 +150,75 @@
       "loading": "Загрузка...",
       "noMore": "Все элементы загружены"
     }
+  },
+  "sessions_view": {
+    "title": "Сессии",
+    "description": "Список игровых сессий",
+    "loading": "Загрузка сессий...",
+    "no_more": "Все сессии загружены",
+    "create_session": "Создать сессию",
+    "description_label": "Описание",
+    "architect": "Архитектор",
+    "created": "Создана",
+    "players": "Игроки",
+    "no_description": "Нет описания",
+    "load_error": "Не удалось загрузить список сессий",
+    "load_error_general": "Произошла ошибка при загрузке списка сессий",
+    "referral_link": "Реферальная ссылка",
+    "copy_link": "Копировать ссылку",
+    "link_copied": "Ссылка скопирована в буфер обмена",
+    "copy_error": "Не удалось скопировать ссылку"
+  },
+  "create_session_view": {
+    "title": "Создать сессию",
+    "description": "Создание новой игровой сессии",
+    "name_label": "Название сессии",
+    "name_placeholder": "Введите название сессии",
+    "description_label": "Описание",
+    "description_placeholder": "Введите описание сессии (необязательно)",
+    "cancel": "Отмена",
+    "create": "Создать",
+    "creating": "Создание...",
+    "success": "Сессия успешно создана",
+    "create_error": "Не удалось создать сессию",
+    "create_error_general": "Произошла ошибка при создании сессии"
+  },
+  "session_detail_view": {
+    "loading": "Загрузка сессии...",
+    "load_error": "Не удалось загрузить сессию",
+    "load_error_general": "Произошла ошибка при загрузке сессии",
+    "edit": "Редактировать",
+    "delete": "Удалить",
+    "no_description": "Нет описания",
+    "architect": "Архитектор",
+    "created": "Создана",
+    "updated": "Обновлена",
+    "players": "Игроки",
+    "add_player": "Добавить игрока",
+    "loading_players": "Загрузка игроков...",
+    "no_players": "В сессии пока нет игроков",
+    "edit_not_implemented": "Редактирование сессии пока не реализовано",
+    "delete_confirm": "Вы уверены, что хотите удалить эту сессию?",
+    "delete_success": "Сессия успешно удалена",
+    "delete_error": "Не удалось удалить сессию",
+    "delete_error_general": "Произошла ошибка при удалении сессии",
+    "add_player_not_implemented": "Добавление игроков пока не реализовано",
+    "remove_player_confirm": "Вы уверены, что хотите удалить игрока",
+    "remove_player_success": "Игрок успешно удален из сессии",
+    "remove_player_error": "Не удалось удалить игрока из сессии",
+    "remove_player_error_general": "Произошла ошибка при удалении игрока из сессии"
+  },
+  "session_join_view": {
+    "title": "Присоединиться к сессии",
+    "description": "Вы были приглашены присоединиться к игровой сессии",
+    "loading": "Загрузка информации о сессии...",
+    "join": "Присоединиться к сессии",
+    "joining": "Присоединяемся...",
+    "success": "Вы успешно присоединились к сессии! Перенаправление...",
+    "join_error": "Не удалось присоединиться к сессии",
+    "join_error_general": "Произошла ошибка при попытке присоединиться к сессии",
+    "load_error": "Не удалось загрузить информацию о сессии",
+    "load_error_general": "Произошла ошибка при загрузке информации о сессии",
+    "no_description": "Нет описания"
   }
 }
