--- a/Frontend/src/locales/ru.json
+++ b/Frontend/src/locales/ru.json
@@ -219,6 +219,8 @@
     "join_error_general": "Произошла ошибка при попытке присоединиться к сессии",
     "load_error": "Не удалось загрузить информацию о сессии",
     "load_error_general": "Произошла ошибка при загрузке информации о сессии",
-    "no_description": "Нет описания"
+    "no_description": "Нет описания",
+    "yes": "Да",
+    "no": "Нет"
   }
 }
